--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,9 @@
+
+
 <app-header-admin></app-header-admin>
 <div class="dasboard_completo">
   <app-sidenav></app-sidenav>
-
+<div class="dashboard">
 <p class="id_usuario_perfil">Bienvenido a Taki-Tri 
     {{ usuario }}
     </p>
@@ -10,10 +12,9 @@
   
 
     
-    
+  </div>   
 </div>
 <app-footer-sistem></app-footer-sistem>
-
 
 
 
