--- a/src/app/components/usuarios/generos/generos.component.html
+++ b/src/app/components/usuarios/generos/generos.component.html
@@ -1,7 +1,7 @@
 <app-header-artist></app-header-artist>
 <div class="Contenedos_todos_los_generos ">
   <app-sidenav-user></app-sidenav-user>
-  <div class="container col-lg-12 col-sm-12 col-md-12">
+  <div class="container1 ">
    
 
 
@@ -9,25 +9,39 @@
     <h2>Todos tus Géneros </h2>
 
     <p>
-      En esta seccion se visualizan todos los géneros creados por el artista,
-       además de generar nuevos ,en donde tiene acceso a eliminarlos editarlos una vez creado.
+      Este módulo te permite visualizar todos tus géneros creados
  </p>
-    <a [routerLink]="['/crear-generos']"><button type="button" class="btn_generos btn-primary " (click)=" limpiarform()"
-      data-toggle="modal" data-target="#productosModal"> Crear Géneros</button> </a>
-    <div class="container">
+ <hr>
+ <div class="container">
+  <div class="row">
+    <div class="col col-lg-4">
+      <a [routerLink]="['/crear-generos']"><button type="button" class="btn_generos btn-primary w-100" (click)=" limpiarform()"
+        data-toggle="modal" data-target="#productosModal"> Crear Géneros</button> </a>
+    </div>
+    <div class="col2 col-lg-3">
+      
+    </div>
+    <div class="col1 col-lg-4">
+      <button  routerLink="/dashboard-user" type="submit" class=" regesar btn_generos btn-primary w-100">Regresar</button>
+    </div>
+  </div>
+</div>
+  
+    <div class="container col-lg-12 col-md-12 col-sm-12">
+      <input type="text" class="hola" placeholder="Buscar por nombre de Género " #textSearch (keyup)="onSearchMensaje(textSearch.value)"/>
       <div class="row">
-    <div class="card col-lg-12 col-sm-8 col-md-12" style="width: 18rem;" *ngFor="let generos of todoslosgeneros">
-      <div class="card-body col-lg-12 col-sm-8 col-md-12   ">
+    <div class="card col-lg-12 col-md-12 col-sm-12 " style="width: 16rem;" *ngFor="let generos of todoslosgeneros | pipeGeneros:page:search let i= index">
+      <div class="card-body col-lg-12 col-md-12 col-sm-12   ">
         <img class="imagenes_generos" [src]="generos.imagenUrl" alt="">
        
         <h3>Genero ecuatoriano</h3>
         <h2 class="card-title">{{generos.Genero_nuevo}}</h2>
         
-        <a routerLink="/crear-Albumes/{{generos.id}}"  clic="gen(generos.Genero_nuevo)"class="btn btn-success">Crear Álbum</a>
-        <button routerLink="/edit-generos/{{generos.id}}"  class="btn btn-primary" >Editar</button>
+        <a routerLink="/crear-Albumes/{{generos.id}}"  clic="gen(generos.Genero_nuevo)"class="btn btn-success btn-sm">Crear Álbum</a>
+        <button routerLink="/edit-generos/{{generos.id}}"  class="btn btn-primary btn-sm" >Editar</button>
         
 
-        <button type="button" class="btn btn-danger"
+        <button type="button" class="btn btn-danger btn-sm"
           (click)="eliminar_genero(generos)">Eliminar</button>
 
 
