--- a/src/app/auth/forgot-password/forgot-password.component.css
+++ b/src/app/auth/forgot-password/forgot-password.component.css
@@ -3,11 +3,11 @@
     background: #5C258D;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to bottom, #2D31FA, #41ACDA,#5D8BF4);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to bottom, #2D31FA, #41ACDA,#5D8BF4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    height: auto;
+    height: 80%;
 }
 .imagen_forgot_password{
     width: 50%;
-    max-height: 3250px;
+    max-height: auto;
  
 
     background-position-x: center;
@@ -18,6 +18,7 @@
     
     margin-left: 150px;   
 }
+
 /*
 .card-title{
     margin-top: 80px; 
@@ -33,7 +34,7 @@
     align-items: center;
    
     width: auto;
-    height: 800px;
+    height: auto;
     padding: 0% !important;
 
  
@@ -43,6 +44,7 @@
     margin-top: 5%;
     margin-bottom: 5%;
 }
+
 
 
 .form-control{
