--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -63,7 +63,8 @@ text-align: center;
 margin-top: 30px;
 align-items: center;
 text-align: center;
-margin-left: 60px;
+margin-left: 20%;
+margin-right: 20%;
 color: white;
 }
 .card_login a{
@@ -74,7 +75,9 @@ color: white;
     align-items: center;
     text-align: center;
     justify-content:center ; 
-    margin-left: 100px;
+  
+    width: 50%;
+    
 }
 .btn{
     margin-top: 30px;
