--- a/src/app/components/administrador/administrador.component.css
+++ b/src/app/components/administrador/administrador.component.css
@@ -3,36 +3,50 @@
 }
 .formulario_completo_artistas{
  margin-top: 30px;
- margin-left: 100px;
- width: 800px;
- height: 900px;
+
+ width: 100%;
+ height: 100%;
+
+ margin-bottom: 0% !important;
+ padding-left: 5%;
+ padding-right: 5%;
 }
+.formulario_completo_artistas h2{
+    text-align: center;
+    font-size: 180% ;
+}
+
 .table {
-    width: 100%;
+    width: 99%;
+  
   }
   .nav-link{
     color: black;
 }
 .text-white{
+    width: auto;
+  
     color: black;
+}
+.btn{
+    margin-left: 20px;
+  
+    
+}
+.hola{
+    width: 99%;
+    height: 50px;
+    border-top-left-radius:5px ;
+    border-top-right-radius:5px ;
+    border-bottom-left-radius:5px ;
+    
+    border-bottom-right-radius:5px ;
 }
 .nombre_list{
     color: black;
+    
 }
-.formulario_completo_artistas p{
-    color:black;
-    border-style: solid;
-    border-width: 3px;
-    border-left-width: 10px;
-    border-right-width: 10px;
-    border-right-width: 10px;
-    border-top-color:black;
-    border-right-color:black;
-    border-left-color:black;
-    border-bottom-color:black;
-    padding: 5px;
-    margin-bottom: 20px;
-}
+
 
   
  
