--- a/src/app/components/administrador/solicitud-aceptadas/solicitud-aceptadas.component.css
+++ b/src/app/components/administrador/solicitud-aceptadas/solicitud-aceptadas.component.css
@@ -2,26 +2,21 @@
     display: flex;
 }
 .formulario_completo_artistas_aceptados{
-
     margin-top: 30px;
-    margin-left: 100px;
-    width: 800px; 
-    height: 900px;
+
+    width: 100%;
+    height: 90%;
+   
+    margin-bottom: 0% !important;
+    padding-left: 5%;
+    padding-right: 5%;
 }
-.formulario_completo_artistas_aceptados p{
-    color:black;
-    border-style: solid;
-    border-width: 3px;
-    border-left-width: 10px;
-    border-right-width: 10px;
-    border-right-width: 10px;
-    border-top-color:black;
-    border-right-color:black;
-    border-left-color:black;
-    border-bottom-color:black;
-    padding: 5px;
-    margin-bottom: 20px;
+.formulario_completo_artistas_aceptados h2{
+    text-align: center;
+    font-size: 180% ;
 }
+
+
 .text-white{
     color: black;
 }
