--- a/src/app/components/usuarios/Albumes/edit-albumes/edit-albumes.component.css
+++ b/src/app/components/usuarios/Albumes/edit-albumes/edit-albumes.component.css
@@ -10,15 +10,17 @@ width: auto;
 
 .formulario_albumes{
   
-   width: 450px;
-    margin-top: 15%;
-   
-  
-  
- 
+   width: 60%;
+    margin-top: 10%;
+    margin-left: 10%;
 }
+.form-control{
+    width:100%;
+}
+
 .input-group{
-    max-width: 250%;
+    width: auto;
+  
 }
 .imagenes_albumes img{
     margin-top: 30%;
@@ -42,22 +44,10 @@ width: auto;
     margin-top: 5%;
     margin-left: 10%; 
 }
-.parrafo_informativo p{
-    color:black;
-    border-style: solid;
-    border-width: 3px;
-    border-left-width: 10px;
-    border-right-width: 10px;
-    border-top-color:black;
-    border-right-color:black;
-    border-left-color:black;
-    border-bottom-color:black;
-    padding: 5px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 5%;
+.parrafo_informativo {
+    padding-left: 5%;
+    padding-right: 5%;
+    width: 80%;
 }
 .parrafo_informativo h2{
     text-align: center;
@@ -72,8 +62,20 @@ width: auto;
     width: 80%;
 }
 .form-control{
-width: 80%;
+width: 100%;
 }
 .btn{
     margin-top: 3%;
+    margin-bottom: 3%;
 }
+.error{
+    color: red;
+    
+   
+ }
+ .red{
+    border-color: red; 
+ }
+ .col1{
+    margin-left: 25%;
+ }
