--- a/src/app/components/usuarios/Albumes/edit-albumes/edit-albumes.component.html
+++ b/src/app/components/usuarios/Albumes/edit-albumes/edit-albumes.component.html
@@ -3,10 +3,26 @@
 <div class="contenedos_edit_generos">
   <app-sidenav-user></app-sidenav-user>
   <div class="parrafo_informativo">
+    <div>
     <h2> Editar Álbumes </h2>
     <p>
-      En esta sección se edita el álbum creado por el artista en los campos permitidos,que son nombre del Álbum,autor y año del mismo los cuales son llenados por el artista.
+      Este módulo te permite editar los álbumes creados 
   </p>
+  <hr>
+  <div class="container">
+    <div class="row">
+      <div class="col col-lg-3">
+       
+      </div>
+      <div class="col col-lg-3">
+        
+      </div>
+      <div class="col1 col-lg-3">
+        <button  routerLink="/dashboard-user" type="submit" class=" regesar btn btn-primary w-100">Regresar</button>
+      </div>
+    </div>
+  </div>
+</div>
 <form class="formulario_albumes_completo" (ngSubmit)="onSubmit()" [formGroup]="albumForm">
  
   <div class="imagenes_albumes">
@@ -23,27 +39,27 @@
 
   <div class="input-group mb-5">
     <label for="text" class="input_label_edit">Álbum</label>
-    <input type="text" class="form-control" placeholder="Album" required formControlName="name">    
+    <input type="text" class="form-control" placeholder="Album" required formControlName="name" ngModel pattern="[a-zA-Z-ñ ]*" [class.red]="albumes_nuevo_no_valido" >    
+    <label class="error" *ngIf="albumes_nuevo_no_valido"  >{{albumesmio()}}</label> 
+    <br>
   </div>
   <div class="input-group mb-5">
     <label for="text" class="input_label_edit">Autor</label>
-    <input type="text" class="form-control" placeholder="Autor" required formControlName="author">
+    <input type="text" class="form-control" placeholder="Autor" required formControlName="author" ngModel pattern="[a-zA-Z-ñ ]*" [class.red]="autor_nuevo_no_valido" >
+    <label class="error" *ngIf="autor_nuevo_no_valido"  >{{autormio()}}</label> 
+    <br>
   </div>
   <div class="input-group mb-5">
     <label for="text" class="input_label_edit">Año</label>
-    <input type="text" class="form-control" placeholder="Año" required formControlName="year">
+    <input type="text" class="form-control" placeholder="Año" required formControlName="year" ngModel pattern="[a-zA-Z-ñ ]*" [class.red]="anio_nuevo_no_valido">
+    <label class="error" *ngIf="anio_nuevo_no_valido"  >{{aniomio()}}</label> 
+    <br>
   </div>
-<div class="form-group">
-  
-
- 
-
-
-</div>
 
 
 
-  <button  class="btn btn-primary" [disabled]="!albumForm.valid"   type="submit">EDITAR</button>
+
+  <button  class="btn btn-primary w-100" [disabled]="!albumForm.valid"   type="submit">EDITAR</button>
  
 
 </div>
