--- a/src/app/components/usuarios/Albumes/show-albumes/show-albumes.component.css
+++ b/src/app/components/usuarios/Albumes/show-albumes/show-albumes.component.css
@@ -19,38 +19,44 @@
 }
 .container1{
   
-    width:75%;
+    width:80%;
     height: auto;
-    padding-left: 3%;
-}
-.container1 p{
-    color:black;
-    border-style: solid;
-    border-width: 3px;
-    border-left-width: 10px;
-    border-right-width: 10px;
-    border-top-color:black;
-    border-right-color:black;
-    border-left-color:black;
-    border-bottom-color:black;
-    padding: 5px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
+   
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
-.container{
-    padding-left: 9%;
-   
-   
-}
+
+
 .container1 h2{
     text-align: center;
     font-size: 180% ;  
 }
 .btn{
-    margin: 2px;
-    font-size: 80% ;     
+    margin-left: 2px;
+    font-size: 80% ; 
+   
+}
+.hola{
+    width: 99%;
+    margin-left: 2.9%;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius:5px ;
+    border-bottom-right-radius: 5px;
+    height: 35px;
+    margin-bottom: 2%;
+
+}
+.btn_regresar{
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius:5px ;
+    border-bottom-right-radius: 5px;
+    height: 35px;
+    margin-left: 10px;
+    margin-right: 30%;
+    margin-bottom: 5%;
 }
 .imagenes_generos{
     width: 220px;
@@ -61,8 +67,8 @@
     text-align: center;  
 }
 .card{
-    display: flex !important;
-    margin-left: 10px;
+    display: flex ;
+    margin-left: 3%;
     margin-bottom: 10px;
 }
 
