--- a/src/app/components/usuarios/canciones/create-canciones/create-canciones.component.html
+++ b/src/app/components/usuarios/canciones/create-canciones/create-canciones.component.html
@@ -2,30 +2,52 @@
 <div class="componente_canciones">
     <app-sidenav-user></app-sidenav-user>
     <div class="crear_canciones">
-    <h2>Crear Nuevos Género</h2>
+    <h2>Crear Canciones </h2>
+    <p>
+      Este módulo te permite subir canciones a tus álbumes
+    <hr>
+    <div class="container">
+      <div class="row">
+        <div class="col col-lg-3">
+         
+        </div>
+        <div class="col col-lg-5">
+          
+        </div>
+        <div class="col1 col-lg-3">
+          <button  routerLink="/dashboard-user" type="submit" class=" regesar btn btn-primary w-100">Regresar</button>
+        </div>
+      </div>
+    </div>
     <div class="form-group " >
 
 
       <form class="formulario_generos" (ngSubmit)="crear_canciones()" [formGroup]="cancionesforms">
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" placeholder="Nombre_cancion" required formControlName="song_nombre">
-        </div>
-      <div class="form-group">
+        <div class="form-group">
         
-
-        <input type="file" class="form-control-file" accept="audio/*" (change)="selectChange($event)" ><br>
-
           <audio [src]="imgURL" with="100" height="100"></audio>
-
-      </div>
-
-
-      <div class="modal-footer">
-        <button  class="btn btn-secondary" [disabled]="!cancionesforms.valid"   type="submit">Crear</button>
+          <input type="file" class="form-control-file" accept="audio/*" (change)="selectChange($event)" ><br>
+  
+            
+  
+        </div>
        
-      </div>
+        <div class="input-group mb-3">
+          <label >Nombre de la Canción</label>
+          <input type="text" class="form-control" placeholder="Nombre canción" required formControlName="song_nombre" ngModel pattern="[a-zA-Z-ñ ]*" [class.red]="canciones_nuevo_no_valido">
+          <label class="error" *ngIf="canciones_nuevo_no_valido"  >{{cancionmio()}}</label> 
+          <button  class="btn btn-primary w-100" [disabled]="!cancionesforms.valid"   type="submit">Crear</button>
+       
+        </div>
+  
+
+
+
+      
+  
     </form>
 
   </div>
+</div>
 </div>
 <app-footer-sistem></app-footer-sistem>
