--- a/src/app/components/usuarios/dashboard-user/dashboard-user.component.css
+++ b/src/app/components/usuarios/dashboard-user/dashboard-user.component.css
@@ -9,9 +9,23 @@
    
 }
 .id_usuario_perfil{
-  margin-left: 450px;
+  margin-left: 5px;
 }
-
+.barras{
+  margin-left: 30px;
+ margin-top: 20px;
+  height: 50px;
+  line-height: 50px;
+  
+}
+.barras h2{
+text-align: center;
+}
+.barras2{
+  
+  border:5px solid #666;
+  
+}
 .d-flex {
   height: 100%;
   width: 300px;
@@ -19,4 +33,8 @@
 }
 .dasboard_completo{
   display: flex;
+}
+.legend-items{
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
