--- a/src/app/components/usuarios/generos/create-generos/create-generos.component.css
+++ b/src/app/components/usuarios/generos/create-generos/create-generos.component.css
@@ -2,33 +2,62 @@
    display:flex ; 
 }
 .input-group{
-   text-align: center;
+   margin-top: 8%;
  
+   display: inline-block;
+   width: 50%;
+
+   margin-left: 5%;
+ 
+}
+.imagenes_generos{
+   width:150px;
+    height:150px;
+    border-radius:150px;
+    border:5px solid #666;
+    margin-right: 0.1%;
+}
+.crear_generos{
+
+   display: inline;
+   padding-left: 5%;
+   padding-right: 5%;
+   width: 80%;
+   
+
 }
 .crear_generos h2{
    text-align: center;
    align-items: center;
 }
-.crear_generos p{
-   color:black;
-   border-style: solid;
-   border-width: 3px;
-   border-left-width: 10px;
-   border-right-width: 10px;
-   border-top-color:black;
-   border-right-color:black;
-   border-left-color:black;
-   border-bottom-color:black;
-   padding: 5px;
-   margin-bottom: 20px;
-   margin-left: 3%;
-   margin-right: 2%;
-}
+
 .formulario_generos{
    margin-top: 50px;
-   margin-left: 250px;   
+   margin-left: 10%; 
+
+   display: flex;
+   
+
 
 }
+.form-control{
+   width: 100%;
+}
+
 .form-group{
    margin-top: 50px;
+   
+}
+.btn{
+   margin-top: 3%;
+   display: inline-block;
+}
+.col1{
+   margin-left: 5%;
+}
+.error{
+   color: red;
+}
+.red{
+   border-color: red; 
 }
