--- a/src/app/components/usuarios/generos/edit-generos/edit-generos.component.css
+++ b/src/app/components/usuarios/generos/edit-generos/edit-generos.component.css
@@ -74,42 +74,25 @@
  margin-top: 7%; 
 }
 
-.parrafo_informativo p{
-    color:black;
-    border-style: solid;
-    border-width: 3px;
-    border-left-width: 10px;
-    border-right-width: 10px;
-    border-top-color:black;
-    border-right-color:black;
-    border-left-color:black;
-    border-bottom-color:black;
-    padding: 5px;
-    margin-bottom: 20px;
 
-    margin-left: 5%;
-    margin-right: 4%;
-    margin-bottom: 20px;
-    margin-top: 10px;
-    
-}
 .parrafo_informativo h2{
     text-align: center;
     font-size: 180% ;  
 }
+.parrafo_informativo{
+    width: 80%;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
 
 @media only screen and (max-width: 1200px) {
 
     .formulario_generos{
      
         width: auto;
-        display: inline;
-     
-        
-       
-        margin-top: 7%;
-       
-     
+        display: inline;      
+        margin-top: 7%;     
     } 
    
    
