--- a/src/app/components/usuarios/generos/generos.component.css
+++ b/src/app/components/usuarios/generos/generos.component.css
@@ -1,36 +1,33 @@
 .Contenedos_todos_los_generos{
-display: flex;
-width: auto;
-height: auto;
-max-height: 8024px;
-min-width: 80%;
+    display: flex;
+    width: auto;
+    height: auto;
+    max-height: 8024px;
+    min-width: 80%;
+
+
 }
-.container h2{
+.container1 h2{
     text-align: center;
     font-size: 180% ;  
 }
-.container{
+.container1{
     
-    width:75%;
+    width:80%;
     height: auto;
-    padding-left: 3%;
+   
+    padding-left: 7%;
+    padding-right: 5%;
+   
 
     
    
 }
-.container p{
-    color:black;
-    border-style: solid;
-    border-width: 3px;
-    border-left-width: 10px;
-    border-right-width: 10px;
-    border-top-color:black;
-    border-right-color:black;
-    border-left-color:black;
-    border-bottom-color:black;
-    padding: 5px;
-    margin-bottom: 20px;
+
+.col2{
+    margin-left: 45px;
 }
+
 .btn_generos{
     
     border-top-right-radius: 5px;
@@ -38,15 +35,29 @@ min-width: 80%;
     border-top-left-radius:5px ;
     border-bottom-right-radius: 5px;
     height: 35px;
-    margin-left: 40px;
+    margin-left: 10px;
+    margin-right: 30%;
+    margin-bottom: 5%;
+  
+   
 }
+.hola{
+    width: 96.5%;
+    margin-left: 1.5%;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius:5px ;
+    border-bottom-right-radius: 5px;
+    height: 35px;
+    margin-bottom: 2%;
 
+}
 .btn{
     margin: 2px;
     font-size: 80% ;     
 }
 .imagenes_generos{
-    width: 220px;
+    width: 200px;
     height: 200px;
     text-align: center;
 }
@@ -55,8 +66,9 @@ min-width: 80%;
 }
 .card{
     display: flex ;
-    margin-left: 10px;
+    margin-left: 3%;
     margin-bottom: 10px;
+    
 }
 @media only screen and (max-width: 1200px) {
     .Contenedos_todos_los_generos{
