--- a/src/app/components/usuarios/perfil-artist/edit-artist/edit-artist.component.css
+++ b/src/app/components/usuarios/perfil-artist/edit-artist/edit-artist.component.css
@@ -4,10 +4,43 @@
 }
 .btn{
     height: 50px;
-    margin: 20px;
+    margin-top: 20px;
+    width: auto;
 }
+
 .formulario_editar_perfil{
-    margin-left: 350px;
+    width: 80%;
+    margin-left: 10%;
     text-align: center;  
-    margin-top: 30px; 
+    margin-top: 10%; 
+}
+.contenedor_editar_perfil{
+    padding-left: 5%;
+    padding-right: 5%;
+
+    width: 80%;
+  
+ 
+   
+}
+.col1{
+      text-align: right;
+  }
+  .regesar{
+    height: 40px;
+  
+   
+  }
+.contenedor_editar_perfil h2{
+    text-align: center;
+    font-size: 180% ;
+}
+.mb-3{
+    text-align: initial;
+}
+.error{
+    color: red;
+}
+.red{
+    border-color: red; 
 }
