--- a/src/app/components/usuarios/perfil-artist/edit-artist/edit-artist.component.html
+++ b/src/app/components/usuarios/perfil-artist/edit-artist/edit-artist.component.html
@@ -1,29 +1,58 @@
 <app-header-artist></app-header-artist>
 <div class="formulario_editar_completo">
     <app-sidenav-user></app-sidenav-user>
-
+    <div class="contenedor_editar_perfil">
+<div>
+        <h2>Editar Perfil</h2>
+    <p>
+        Este módulo te permite editar el perfil artista
+        
+   </p>
+   <hr>
+   <div class="container">
+    <div class="row">
+      <div class="col col-lg-5">
+      
+      </div>
+      <div class="col col-lg-4">
+        
+      </div>
+      <div class="col1 col-lg-2">
+        <button  routerLink="/dashboard-user" type="submit" class=" regesar btn btn-primary w-100 ">Regresar</button>
+      </div>
+    </div>
+  </div>
+</div>
 <form [formGroup]="ediForm" (ngSubmit)="onSubmit()" novalidate class="formulario_editar_perfil">
-    <h2>Editar tu Perfil </h2>
-    <hr>
+
+   
+ 
+    
+   
     <div class="mb-3">
         <label class="form-label">Nombre</label>
-        <input formControlName="name" type="text" class="form-control" required>      
+        <input formControlName="name" type="text" class="form-control" required value="name"  ngModel pattern="[a-zA-Z-ñ ]*"  [class.red]="nombre_no_valido">
+        <label class="error"  *ngIf="nombre_no_valido" >{{getErrorMessage_correo()}}</label>      
     </div>
     <div class="mb-3">
         <label class="form-label">Apellido</label>
-        <input formControlName="apellido" type="text" class="form-control" required>      
+        <input formControlName="apellido" type="text" class="form-control" required  ngModel pattern="[a-zA-Z ]*" [class.red]="apellido_no_valido">  
+        <label class="error"  *ngIf="apellido_no_valido" >{{getErrorMessage_apellido()}}</label>       
     </div>
     <div class="mb-3">
-        <label class="form-label">Nickname</label>
-        <input formControlName="nickname" type="text" class="form-control" required>       
+        <label class="form-label">Alias</label>
+        <input formControlName="nickname" type="text" class="form-control" required  ngModel pattern="[a-zA-Z ]*" [class.red]="alias_no_valido">  
+        <label class="error"  *ngIf="alias_no_valido" >{{getErrorMessage_Alias()}}</label>        
     </div>
    
 
     
-    <button type="submit" class="btn btn-primary">Update</button>
-    <button  routerLink="/show-artist/{{usuario}}" type="submit" class="btn btn-primary">Regresar</button>
+    <button type="submit" class="btn btn-primary w-100" [disabled]="!ediForm.valid" >Editar</button>
+
 
 </form>
+
+</div>
 
 </div>
 <app-footer-sistem></app-footer-sistem>
