--- a/src/app/components/usuarios/perfil-artist/show-artist/show-artist.component.css
+++ b/src/app/components/usuarios/perfil-artist/show-artist/show-artist.component.css
@@ -4,10 +4,9 @@
    
 }
 .mb-12{
-    width: 350px;
+    width: auto;
 }
 .formulario_show_perfil{
- 
 
  width: 80%;
  
@@ -21,34 +20,28 @@
     margin-left: 0.5% !important;
   
 }
+.imagen_avatar h2{
+    text-align: center;
+  
+}
 
 .form_perfil{
     width: 60%;
+  
+}
+.texto{
    
+    width: 80%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
-.texto{
-    padding-left: 5%;
-    padding-right: 4%;
-    
-}
+
 .texto h2{
     text-align: center;
     font-size: 180% ;
 }
-.texto p{
-    color:black;
-    border-style: solid;
-    border-width: 3px;
-    border-left-width: 10px;
-    border-right-width: 10px;
-    border-top-color:black;
-    border-right-color:black;
-    border-left-color:black;
-    border-bottom-color:black;
-    padding: 5px;
-    margin-bottom: 20px;
-}
+
 .btn{
     margin-top: 20px;
 }
@@ -64,11 +57,21 @@
     border-radius:150px;
     border:5px solid #666;
 }
+.imagen_avatar h2{
+   
+    margin-right: 130px;
+}
 .form-control{
     text-align: center;
+   
 }
 .form-label{
     margin-top: 0.5%;
+}
+.col1{
+ 
+  margin-left: 5% !important;
+    text-align: right;
 }
 @media only screen and (max-width: 1200px) {
 
