--- a/src/app/components/usuarios/solicitud/solicitud.component.css
+++ b/src/app/components/usuarios/solicitud/solicitud.component.css
@@ -4,11 +4,12 @@
    
 }
 .formulario_solicitud{
-    margin-left: 30px;
+   
     margin-top: 2px;
-
+    padding-left: 5%;
+    padding-right: 5%;
     width: 100%;
-    height: auto;
+    height: 100%;
     
    
 }
@@ -50,7 +51,7 @@ text-align: left;
 }
 
 .mb-3{
-width: 350px;
+width:100%;
 
 
 }
@@ -75,11 +76,11 @@ width: 350px;
 }
 
 .contenedor_mensaje_solicitud{
-    height: 250px;  
+    height: 325px;  
   
 }
 .form-control{
-    width: 250px;
+    width: 100%;
 }
 .btn1{
   
@@ -96,26 +97,39 @@ width: 350px;
     margin-bottom: 20px;
     margin-left: 0.3%; 
 }
-.formulario_solicitud p{
-    color:black;
-    border-style: solid;
-    border-width: 3px;
-    border-left-width: 10px;
-    border-right-width: 10px;
-    border-top-color:black;
-    border-right-color:black;
-    border-left-color:black;
-    border-bottom-color:black;
-    padding: 5px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
+.error{
+    color: red;
 }
+.red{
+    border-color: red; 
+}
+.btn_regresar{
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius:5px ;
+    border-bottom-right-radius: 5px;
+    height: 35px;
+    margin-left: 10px;
+    margin-right: 30%;
+    margin-bottom: 5%;
+}
+.col1{
+    margin-left: 7%;
+}
+.btn1 {
+    color: black;
+}
+.botoneseliminarSolicitud{
+    margin: 5px;
+   
+}
+
 @media only screen and (max-width: 1200px) {
 
     .form_solicitud_completo{
      
         width: auto;
+        height: 100vh;
         display: inline;
      
         margin-left: 10%;
