--- a/src/app/pages/mision-vision/mision-vision.component.css
+++ b/src/app/pages/mision-vision/mision-vision.component.css
@@ -16,7 +16,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
-  --bs-blue: #0d6efd;
+  --bs-blue: #0dfd5d;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
   --bs-pink: #d63384;
@@ -661,6 +661,7 @@ progress {
   padding-left: var(--bs-gutter-x, 0.75rem);
   margin-right: auto;
   margin-left: auto;
+ 
 }
 
 @media (min-width: 576px) {
@@ -11315,10 +11316,18 @@ html {
 
 .page-section {
   padding: 6rem 0;
+ 
+ 
+
+}
+.page-section1{
+  padding: 6rem 0;
+  background: linear-gradient(180deg,#2D31FA,#41ACDA,  #5D8BF4); 
 }
 .page-section .page-section-heading {
   font-size: 2.25rem;
   line-height: 2rem;
+  
 }
 @media (min-width: 992px) {
   .page-section .page-section-heading {
@@ -11454,6 +11463,7 @@ html {
 .masthead {
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
+  background: linear-gradient(to bottom, #2D31FA, #41ACDA,#5D8BF4);
 }
 .masthead .masthead-heading {
   font-size: 2.75rem;
@@ -11468,7 +11478,7 @@ html {
 
 @media (min-width: 992px) {
   .masthead {
-    padding-top: calc(6rem + 104px);
+    padding-top: 9.5%;
     padding-bottom: 6rem;
   }
   .masthead .masthead-heading {
