--- a/src/app/pages/mision-vision/mision-vision.component.html
+++ b/src/app/pages/mision-vision/mision-vision.component.html
@@ -3,7 +3,7 @@
   <!-- Navigation-->
   <app-header></app-header>
   <!-- Masthead-->
-  <header class="masthead bg-primary text-white text-center">
+  <header class="masthead  text-white text-center">
       <div class="container d-flex align-items-center flex-column">
           <!-- Masthead Avatar Image-->
           <img class="masthead-avatar mb-5" src="assets/imagenes/oficial_logo.png" alt="..." />
@@ -49,7 +49,7 @@
       </div>
   </section>
   <!-- About Section-->
-  <section class="page-section bg-primary text-white mb-0" id="about">
+  <section class="page-section1  text-white mb-0" id="about" >
       <div class="container">
           <!-- About Section Heading-->
           <h2 class="page-section-heading text-center text-uppercase text-white">Misión y Visión </h2>
