--- a/src/app/shared/welcome/welcome.component.css
+++ b/src/app/shared/welcome/welcome.component.css
@@ -13,6 +13,30 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+ .navbar-brand{
+  display:contents;
+
+}
+.navbar-brand img{
+  width:90px;
+  height:60px;
+  
+}
+
+
+.home{
+    text-decoration: none;
+    color: aliceblue;
+  }
+  .home img{
+    width:60px;
+  height:60px;
+  border-radius:150px;
+  }
+  .nav-link{
+   
+    color: aliceblue; 
+    font-family: var(--bs-body-font-family); }
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -11314,6 +11338,10 @@ html {
 .page-section {
   padding: 6rem 0;
 }
+.page-section1{
+  padding: 6rem 0;
+  background: linear-gradient(180deg,#2D31FA,#41ACDA,  #5D8BF4); 
+}
 .page-section .page-section-heading {
   font-size: 2.25rem;
   line-height: 2rem;
@@ -11450,8 +11478,9 @@ html {
 }
 
 .masthead {
-  padding-top: calc(6rem + 74px);
+  padding-top:9.5%;
   padding-bottom: 6rem;
+  background: linear-gradient(to bottom, #2D31FA, #41ACDA,#5D8BF4);
 }
 .masthead .masthead-heading {
   font-size: 2.75rem;
@@ -11466,7 +11495,7 @@ html {
 
 @media (min-width: 992px) {
   .masthead {
-    padding-top: calc(6rem + 104px);
+    padding-top: 9.5%;
     padding-bottom: 6rem;
   }
   .masthead .masthead-heading {
